RESOLVED FIXED95709
[Qt] QRawWebViewPrivate does not initialize some members
https://bugs.webkit.org/show_bug.cgi?id=95709
Summary [Qt] QRawWebViewPrivate does not initialize some members
Balazs Kelemen
Reported 2012-09-03 22:49:23 PDT
This is just a typo, the bool flags missing initialization in the constructor.
Attachments
Patch (1.58 KB, patch)
2012-09-03 22:51 PDT, Balazs Kelemen
no flags
Balazs Kelemen
Comment 1 2012-09-03 22:51:20 PDT
Balazs Kelemen
Comment 2 2012-09-05 00:16:06 PDT
Comment on attachment 161965 [details] Patch Clearing flags on attachment: 161965 Committed r127559: <http://trac.webkit.org/changeset/127559>
Balazs Kelemen
Comment 3 2012-09-05 00:16:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.