[Qt] QRawWebViewPrivate does not initialize some members https://bugs.webkit.org/show_bug.cgi?id=95709

Reviewed by Luiz Agostini.

Don't miss initializing the bool flags.

* UIProcess/API/qt/raw/qrawwebview.cpp:
(QRawWebViewPrivate::QRawWebViewPrivate):

Canonical link: https://commits.webkit.org/113697@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127559 268f45cc-cd09-0410-ab3c-d52691b4dbfc